[gd_scene load_steps=3 format=2]

[ext_resource path="res://AAI Case/scripts/DebugScene.gd" type="Script" id=1]
[ext_resource path="res://AAI Case/scenes/AAI_Dialog.tscn" type="PackedScene" id=2]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="TopScreen" type="CanvasLayer" parent="."]

[node name="AAIDialogBox" parent="TopScreen" instance=ExtResource( 2 )]
visible = false
margin_right = 256.0
margin_bottom = 192.0

[node name="PanTesting" type="GridContainer" parent="."]
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = 294.0
margin_right = 256.0
margin_bottom = 384.0
columns = 2

[node name="RightPanBtn" type="Button" parent="PanTesting"]
margin_right = 126.0
margin_bottom = 43.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "pan right"
__meta__ = {
"_edit_lock_": true
}

[node name="LeftPanBtn" type="Button" parent="PanTesting"]
margin_left = 130.0
margin_right = 256.0
margin_bottom = 43.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "pan left"
__meta__ = {
"_edit_lock_": true
}

[node name="LeftSnapBtn" type="Button" parent="PanTesting"]
margin_top = 47.0
margin_right = 126.0
margin_bottom = 90.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "snap left"
__meta__ = {
"_edit_lock_": true
}

[node name="RigthSnapBtn" type="Button" parent="PanTesting"]
margin_left = 130.0
margin_top = 47.0
margin_right = 256.0
margin_bottom = 90.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "snap right"
__meta__ = {
"_edit_lock_": true
}

[node name="NextButton" type="Button" parent="."]
margin_left = 8.0
margin_top = 285.0
margin_right = 250.0
margin_bottom = 377.0
text = ">"

[connection signal="pressed" from="NextButton" to="." method="_on_NextButton_pressed"]
